--- a/Tex/app_plots.tex
+++ b/Tex/app_plots.tex
@@ -15,10 +15,11 @@
 \end{table}
 \section{Experiment}
 
+
 \begin{figure}
 	\centering
 	\includegraphics[width=0.8\linewidth]{images/kossel_gaas.png}
-	\caption{Mean images of 5000 shots after background subtraction for sample 1 (left) and sample 2 (right)}
+	\caption[Mean image of fluorescence of GaAs after background subtraction with visible Kossel lines ]{Mean images of 5000 shots after background subtraction for sample 1 (left) and sample 2 (right), showing the Kossel lines and some artifacts at the edges.}
 	\label{fig:kosselgaasmean}
 \end{figure}
 
