--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -288,7 +288,9 @@
 	\acro{PS}{Polystyrene}
 	\acro{MMA}{Methylmethacrylate}
 	\acro{EHMA}{Etyhlhexymethacrylate}
+	\acro{GaAs}{Galliumarsenide}
 	\acro{PSF}{Point Spread Function}
+	\acro{FWHM}{Full width at half maximum}
 \end{acronym}
 
 \endgroup
