--- a/sacla/phase1.ipynb
+++ b/sacla/phase1.ipynb
@@ -3587,7 +3587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3598,33 +3598,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/arcv1/UserData/gorkhover/TAIS2020/crystal/bg_919786.h5\n"
-     ]
-    }
-   ],
-   "source": [
-    "! ls "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!mv /arcv1/UserData/gorkhover/TAIS2020/crystal/bg_919786.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/bg/"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3663,7 +3644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3699,17 +3680,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python ~/zimmf/phase13.py /UserData/gorkhover/TAIS2020/crystal/919744.h5 /UserData/gorkhover/TAIS2020/crystal/919745.h5 /UserData/gorkhover/TAIS2020/crystal/919746.h5 /UserData/gorkhover/TAIS2020/crystal/919747.h5 /UserData/gorkhover/TAIS2020/crystal/919748.h5 /UserData/gorkhover/TAIS2020/crystal/919749.h5 /UserData/gorkhover/TAIS2020/crystal/919750.h5 /UserData/gorkhover/TAIS2020/crystal/919751.h5 /UserData/gorkhover/TAIS2020/crystal/919752.h5 /UserData/gorkhover/TAIS2020/crystal/919753.h5 /UserData/gorkhover/TAIS2020/crystal/919754.h5 /UserData/gorkhover/TAIS2020/crystal/919755.h5 /UserData/gorkhover/TAIS2020/crystal/919756.h5 /UserData/gorkhover/TAIS2020/crystal/919757.h5 /UserData/gorkhover/TAIS2020/crystal/919758.h5 /UserData/gorkhover/TAIS2020/crystal/p1/parts2/gaas1_p1.h5 --pulsethres 300 --bgfile /home/gorkhover/UserDatagorkhover/TAIS2020/crystal/bg_919786.h5 --name gaas1 --kalpha 9200 --sample gaas1 --focus_y 0.000005\n",
-      "(0, '2390379.fep02-ib\\n')\n",
-      "python ~/zimmf/phase13.py /UserData/gorkhover/TAIS2020/crystal/919764.h5 /UserData/gorkhover/TAIS2020/crystal/919765.h5 /UserData/gorkhover/TAIS2020/crystal/919766.h5 /UserData/gorkhover/TAIS2020/crystal/919767.h5 /UserData/gorkhover/TAIS2020/crystal/919768.h5 /UserData/gorkhover/TAIS2020/crystal/919769.h5 /UserData/gorkhover/TAIS2020/crystal/919770.h5 /UserData/gorkhover/TAIS2020/crystal/919771.h5 /UserData/gorkhover/TAIS2020/crystal/919772.h5 /UserData/gorkhover/TAIS2020/crystal/919773.h5 /UserData/gorkhover/TAIS2020/crystal/919774.h5 /UserData/gorkhover/TAIS2020/crystal/919775.h5 /UserData/gorkhover/TAIS2020/crystal/919776.h5 /UserData/gorkhover/TAIS2020/crystal/919777.h5 /UserData/gorkhover/TAIS2020/crystal/919778.h5 /UserData/gorkhover/TAIS2020/crystal/919779.h5 /UserData/gorkhover/TAIS2020/crystal/919780.h5 /UserData/gorkhover/TAIS2020/crystal/919781.h5 /UserData/gorkhover/TAIS2020/crystal/919782.h5 /UserData/gorkhover/TAIS2020/crystal/919783.h5 /UserData/gorkhover/TAIS2020/crystal/919784.h5 /UserData/gorkhover/TAIS2020/crystal/p1/parts2/gaas2_p1.h5 --pulsethres 300 --bgfile /home/gorkhover/UserDatagorkhover/TAIS2020/crystal/bg_919786.h5 --name gaas2 --kalpha 9200 --sample gaas2 --focus_y 0.000005\n",
-      "(0, '2390380.fep02-ib\\n')\n"
+      "python ~/zimmf/msc/sacla/phase1.py /arcv1/UserData/gorkhover/TAIS2020/crystal/919744.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919745.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919746.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919747.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919748.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919749.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919750.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919751.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919752.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919753.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919754.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919755.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919756.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919757.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919758.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/p1/final/gaas1_p1.h5 --pulsethres 300 --bgfile /arcv1/UserData/gorkhover/TAIS2020/crystal/bg/bg_919786.h5 --name gaas1 --kalpha 9200 --sample gaas1 --focus_y 0.000005\n",
+      "(0, '3186581.fep02-ib\\n')\n",
+      "python ~/zimmf/msc/sacla/phase1.py /arcv1/UserData/gorkhover/TAIS2020/crystal/919764.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919765.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919766.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919767.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919768.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919769.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919770.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919771.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919772.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919773.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919774.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919775.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919776.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919777.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919778.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919779.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919780.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919781.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919782.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919783.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/919784.h5 /arcv1/UserData/gorkhover/TAIS2020/crystal/p1/final/gaas2_p1.h5 --pulsethres 300 --bgfile /arcv1/UserData/gorkhover/TAIS2020/crystal/bg/bg_919786.h5 --name gaas2 --kalpha 9200 --sample gaas2 --focus_y 0.000005\n",
+      "(0, '3186582.fep02-ib\\n')\n"
      ]
     }
    ],
@@ -3717,7 +3698,7 @@
     "for name,cmd in cmds:\n",
     "        #if not (name =='Cu5um_focus' or 'Fe500nm_focus_high' in name): continue\n",
     "        print(cmd)\n",
-    "        print(qsub(['eval \"$(conda shell.bash hook)\"','conda activate zimmf3',cmd],jobname=f\"p1c_{name}\",threads=14))"
+    "        print(qsub(['eval \"$(conda shell.bash hook)\"','conda activate zimmf4',cmd],jobname=f\"p1c_{name}\",threads=14))"
    ]
   },
   {
