--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -26,7 +26,7 @@
 \usepackage{subcaption} %subfigures
 \usepackage{booktabs} %Schönere Tabellen
 \usepackage{fancyhdr} %Schönere Kopfzeile
-%\usepackage[section]{placeins} %Abbildungen und Tabellen bleiben in ihrer Section
+\usepackage{placeins} %[section]  damit Abbildungen und Tabellen  in ihre Section bleiben
 \usepackage{blindtext} %Einfügen von Blindtext über \blindtext
 \usepackage{siunitx} %Einstellungen für Dezimaltrennzeichen und Definitionen in siunitx.cfg
 \usepackage[autostyle=true,german=quotes]{csquotes} %Verwendung von Anführungszeichen über \enquote{Text}
